Archive2/e0/fb8d028e357b45/output
main.cpp: In function 'int main()':
main.cpp:15:5: error: 'cout' is not a member of 'std'
     std::cout << s.n;
     ^
